<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_event_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="events.CreateEventPage">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/create_event_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="#FFFFFF"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_arrow_back_24" />

                <TextView
                    android:id="@+id/create_event_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:gravity="center"
                    android:text="@string/create_event"
                    android:textSize="25sp"
                    android:layout_centerInParent="true"
                    android:textStyle="bold" />

            </RelativeLayout>

            <Spinner
                android:id="@+id/event_type_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/create_event_header"
                android:layout_margin="10dp"
                android:background="@color/primary_shade"
                android:entries="@array/event_types"
                android:padding="15dp"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/event_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/primary_shade"
                android:hint="Event Name"
                android:inputType="text"
                android:padding="15dp" />

            <EditText
                android:id="@+id/start_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/primary_shade"
                android:focusable="false"
                android:hint="Start Date"
                android:padding="15dp" />

            <EditText
                android:id="@+id/end_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/primary_shade"
                android:focusable="false"
                android:hint="End Date"
                android:inputType="date"
                android:padding="15dp" />

            <EditText
                android:id="@+id/start_time_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/primary_shade"
                android:focusable="false"
                android:hint="Start Time"
                android:inputType="time"
                android:padding="15dp" />

            <EditText
                android:id="@+id/end_time_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/primary_shade"
                android:focusable="false"
                android:hint="End Time"
                android:inputType="time"
                android:padding="15dp" />

            <EditText
                android:id="@+id/event_location_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/primary_shade"
                android:hint="Location"
                android:inputType="text"
                android:padding="15dp" />

            <EditText
                android:id="@+id/event_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/primary_shade"
                android:hint="Description"
                android:inputType="text"
                android:padding="15dp" />

            <EditText
                android:id="@+id/event_add_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/primary_shade"
                android:hint="Add people"
                android:inputType="text"
                android:padding="15dp" />

            <Button
                android:id="@+id/create_event_button"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:background="@color/primary_shade"
                android:layout_height="wrap_content"
                android:text="@string/create" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>