<resources>
    <string name="app_name">MyFirstExample</string>
    <string name="create_event">Create Event</string>
    <string name="event_title">Event Title</string>
    <string name="create_event_button">Create Event</string>
    <string name="event_location">Event Location</string>
    <string name="select_a_date">Select a date</string>
</resources>