...
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="325dp"
        android:background="@null"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintEnd_toStartOf="@+id/filter_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
...
