...
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:padding="16dp"
        android:gravity="center"/>

        <ImageButton
            android:id="@+id/menu_calendar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/baseline_menu_24"
            android:translationX="0dp"
            android:translationY="0dp" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sun"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/sunDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30"
                android:textSize="18sp" />
        </LinearLayout>

...
